--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <noscript>Enabling JavaScript is required to run this app.</noscript>
-<div id="root"></div>
+<div id="app"></div>
 </body>
 
 </html>
