add favicon svg

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <title>Zimara</title>
   <meta id="appName" name="application-name" content="Zimara">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
   <base href="/">
 </head>
 
