rename from zimara to kaoto

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Zimara</title>
-  <meta id="appName" name="application-name" content="Zimara">
+  <title>Kaoto</title>
+  <meta id="appName" name="application-name" content="Kaoto">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
   <base href="/">
